# compute-cluster

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.aider  Makefile  README.md  ansible.cfg  ansible.mk  compose.ai.yml  compute-cluster.yml  compute_cluster.nimble  constraints.txt  controller-01.sh  controller-02.sh  controller.sh  go.mod  go.sum  jaeger-linkerd.yaml  k3s.sh  list-tasks.py  main.go  memory-store.yml  mkdocs.yml  node-token  node.sh  notes.txt  pom.xml  pyproject.toml  requirements.txt  uninstall.sh  users.sh  worker.sh
.config/: .env.example  aider.yml  compute-cluster.yml  mkdocs.yml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  go.yml
.memory-store-state/: AIDER_CONTEXT.md  task-state.json
charts/: repositories.yaml
charts/_graphapp/: deployment.yaml
charts/caddy/: Chart.yaml  tls.crt  tls.key  values.yaml
charts/cockroachdb/: Chart.yaml  (+3 more)
charts/cockroachdb-init/: cluster-init.yaml  service.yaml
cmd/: beam.go  job.go  root.go  run.go  run.py  tools.go
deploy/: Makefile
docker/: Dockerfile  Dockerfile-Cockroachdb  Dockerfile-NCluster
docs/: AIDER_AVANTE_INTEGRATION_GUIDE.md  AIDER_TERMINAL_GUIDE.md  ANSIBLE_AI_INTEGRATION_GUIDE.md  AVANTE_NVIM_COMMANDS.md  AVANTE_SECURITY_ALTERNATIVES.md  DEPLOYMENT_GUIDE.md  GETTING_STARTED.md  GVISOR_AIDER_ALTERNATIVE.md  INDEX.md  MARKDOWN_SUPPORT.md  MEMORY_STORE_IMPLEMENTATION_GUIDE.md  MONGO8_UPGRADE.md  README.md  WORKFLOW_EXAMPLES.md  detect-next-task.py  update-progress.py
etc/: .bash_profile  cluster.conf  controller-ip.conf  network.conf  worker-01-ip.conf
memory-store/: docker-compose.yml  init.sql  test-local.sh
src/: Makefile  build.zig  docker-compose.yml  go.mod  go.sum  main.go  main.nim  main.nimble  main.py  requirements.txt  xbuild.zig
tests/: config.nims
(+172 files in other folders)
