[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compute-cluster"
version = "0.1.0"
description = "Development environment dependencies"
requires-python = ">=3.8"
dependencies = [
    "aider-chat==0.86.1",
    "ansible==13.3.0",
    # Terminal enhancements
    "powerline-status==2.7",
    "powerline-gitstatus==1.3.3", 
    "thefuck==3.32",
    "httpie==3.2.4",
    "Glances==4.3.1",
    # Python development
    "black==25.1.0",
    "flake8==7.3.0",
    "mypy==1.15.0",
    "pytest==8.3.5",
    "ipython==9.8.0",
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.1",
    # C/Go development helpers
    "cmake-language-server==0.1.11",
    "clang-format==20.1.8",
]

# Note: The following packages should be installed via system package manager (apt):
# neofetch, ranger, fzf, bat, gopls, tmux, htop
